feat: get user`s namespaces
